<resources>
    <string name="app_name">TurtleCoin Wallet</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_wallet">Wallet</string>

    <string name="title_activity_landing">LandingActivity</string>
    <string name="welcome_message">Welcome to TurtleCoin Wallet</string>
    <string name="sign_in">Sign In</string>
    <string name="create_profile">Create a profile</string>

    <string name="receive">Receive</string>
    <string name="send">Send</string>
    <string name="receive_turtlecoin_address">Receive TurtleCoin Address</string>
    <string name="receive_coin_description">Tap on address to copy it to clipboard or click on icon to share QR code.</string>
    <string name="btc_ticker">BTC</string>
    <string name="trtl_ticker">TRTL</string>
    <string name="recipients_address">Recipient\'s Address</string>
    <string name="address">Address</string>
    <string name="height">Height</string>
    <string name="hash_rate">Hash Rate</string>
    <string name="market_data">Market Data</string>
    <string name="total_balance">Total Balance</string>
    <string name="network_info">Network Info</string>
    <string name="dashboard">Dashboard</string>
    <string name="log_out">Log Out</string>
    <string name="difficulty">Difficulty</string>
    <string name="supply">Supply</string>
    <string name="loading">loading...</string>
    <string name="transactions">Transactions</string>
</resources>
