<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.turtlecoin.turtlewallet.LandingActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="20dp">
        <View
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1" />
        <ImageView
            android:id="@+id/turtle_shell"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:src="@drawable/ic_turtle_shield"
            android:layout_weight="4"/>

        <TextView
            android:id="@+id/welcome_message"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/welcome_message"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_weight="4"/>

        <Button
            android:id="@+id/sign_in"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textColor="@color/mediumTurtleGreen"
            android:background="@drawable/round_corner_white"
            android:padding="10dp"
            android:onClick="signInOnClick"/>

        <Button
            android:id="@+id/create_profile"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@null"
            android:gravity="center"
            android:text="@string/create_profile"
            android:textColor="@color/white"
            android:padding="10dp"/>
        <View
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"/>

    </LinearLayout>


    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="?metaButtonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

        </LinearLayout>
    </FrameLayout>

</FrameLayout>
